<resources>
    <string name="app_name">Ear Training</string>
    <string name="mainMenuTitle">Title Placeholder</string>
    <string name="progress">Button</string>
    <string name="placeholdertitle">Card Place Holder Title</string>
    <string name="cardDescriptionPlaceholder">Text between Button and Divider. This is where the activity is described so the user knows what they are selecting</string>
    <string name="go">Go</string>
    <string name="optionsButtonLabel">Customize Activity</string>
    <string name="startActivityLabel">Start Activity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_interval">Play Interval</string>
    <string name="interval_identification">Interval Identification</string>
    <string name="done">Done</string>
    <string name="interval_identification_options">Interval Identification Options</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="_5">5</string>
    <string name="_10">10</string>
    <string name="_15">15</string>
    <string name="_20">20</string>
    <string name="static_first_note">Static First Note</string>
    <string name="enable_disable_intervals">Enable/Disable Intervals</string>
    <string name="interval_direction">Interval Direction</string>
    <string name="both">Both</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="continuetxt">Continue</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="placeholder">placeholder</string>
    <string name="well_done">Well Done!</string>
    <string name="your_stats">Your Stats:</string>
    <string name="interval_stats">Interval Stats</string>
    <string name="accuracy">Accuracy</string>
    <string name="stats">Stats</string>
    <string name="start">Start</string>
    <string name="customize_activity">Customize Activity</string>
    <string name="start_activity">Start Activity</string>
    <string name="chord_tone_identification">Chord Tone Identification</string>
    <string name="chords">Chords</string>
    <string name="minor_triad_chord_tones">Minor Triad Chord Tones</string>
    <string name="major_triad_chord_tones">Major Triad Chord Tones</string>
    <string name="major_triad">Major Triad</string>
    <string name="minor_triad">Minor Triad</string>
    <string name="chord_tone_identification_stats">Chord Tone Identification Stats</string>
    <string name="ear_training_exercises">Ear Training Exercises</string>
    <string name="chord_tone_instructions">You will hear a chord, and then a single note. Identify the relationship between the single note and the chord.</string>
    <string name="interval_identification_instructions">You will hear an interval, which is made of two notes. Identify the intervalic distance between these notes.</string>
    <string name="fixed_first_note">Fixed First Note</string>
    <string name="fixed_chord_root_note">Fixed Chord Root Note</string>
</resources>