<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntervalTrainingFiles.IntervalOptionsActivity"
    android:background="@color/body_background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/title_background"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:id="@+id/mainMenuTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interval_identification_options"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp"
            android:textColor="@color/text_and_border"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <!-- Dividing Line -->
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/text_and_border"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toTopOf="@id/doneButton"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/scrollContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/selectQuestionsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/intervalDirectionContainer"
                app:layout_constraintTop_toTopOf="parent"
                >

                <TextView
                    android:id="@+id/questionsLabelTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/number_of_questions"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/numberOfQuestionsRadioGroup"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/text_and_border"
                    />

                <RadioGroup
                    android:id="@+id/numberOfQuestionsRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/questionsLabelTextView">

                    <RadioButton
                        android:id="@+id/radioButton5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/_5"
                        android:textColor="@color/text_and_border"
                        app:buttonTint="@color/mini_button_widget"
                        />

                    <RadioButton
                        android:id="@+id/radioButton10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/_10"
                        android:textColor="@color/text_and_border"
                        app:buttonTint="@color/mini_button_widget"
                        />

                    <RadioButton
                        android:id="@+id/radioButton15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/_15"
                        android:textColor="@color/text_and_border"
                        app:buttonTint="@color/mini_button_widget"
                        />

                    <RadioButton
                        android:id="@+id/radioButton20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/_20"
                        android:textColor="@color/text_and_border"
                        app:buttonTint="@color/mini_button_widget"
                        />

                </RadioGroup>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/intervalDirectionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="138dp"
                app:layout_constraintTop_toBottomOf="@id/selectQuestionsLayout"
                app:layout_constraintBottom_toTopOf="@id/staticRootLayout"
                >

                <TextView
                    android:id="@+id/intervalDirection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/interval_direction"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    app:layout_constraintBottom_toTopOf="@id/intervalDirectionRadioGroup"
                    android:textColor="@color/text_and_border"
                    />

                <RadioGroup
                    android:id="@+id/intervalDirectionRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/intervalDirection"
                    >

                    <RadioButton
                        android:id="@+id/radioButtonBoth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/both"
                        android:layout_marginHorizontal="10dp"
                        android:textColor="@color/text_and_border"
                        app:buttonTint="@color/mini_button_widget"
                        />

                    <RadioButton
                        android:id="@+id/radioButtonAscending"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ascending"
                        android:layout_marginHorizontal="10dp"
                        android:textColor="@color/text_and_border"
                        app:buttonTint="@color/mini_button_widget"
                        />

                    <RadioButton
                        android:id="@+id/radioButtonDescending"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/descending"
                        android:layout_marginHorizontal="10dp"
                        android:textColor="@color/text_and_border"
                        app:buttonTint="@color/mini_button_widget"
                        />
                </RadioGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/staticRootLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/intervalSelectionLayout"
                app:layout_constraintTop_toBottomOf="@+id/intervalDirectionContainer">

                <TextView
                    android:id="@+id/staticRootTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fixed_first_note"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/staticRootSwitch"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/text_and_border"
                    />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/staticRootSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/staticRootTextView"
                    app:thumbTint="@color/switch_thumb_colors"
                    app:trackTint="@color/switch_track_colors"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/intervalSelectionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/staticRootLayout">

                <TextView
                    android:id="@+id/intervalSelectionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/enable_disable_intervals"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/intervalRecyclerView"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/text_and_border"
                    />

                <androidx.recyclerview.widget.RecyclerView

                    android:id="@+id/intervalRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@id/intervalSelectionTextView" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <Button
        android:id="@+id/doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/done"
        app:cornerRadius="2dp"
        app:layout_constraintTop_toBottomOf="@id/scrollView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/button_blue"
        android:textColor="@color/text_and_border"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

